Fix HTML content height & grid heading with --svg
- when unfolding HTML content SVG solution and grid overlapped in some cases
- with --svg heading was omitted between solution and grid

--- a/wordsearch.css
+++ b/wordsearch.css
@@ -69,7 +69,7 @@ ul {
  */
 .m-fadeIn {
   visibility: visible;
-  max-height: 100vh;
+  max-height: initial;
   opacity: 1;
   transition:  max-height linear 350ms, visibility 0s linear 0s, opacity 350ms linear 200ms;
 }
